fix for searchbox on mobile with admin_bar

--- a/style.css
+++ b/style.css
@@ -223,6 +223,13 @@ pre:before {
         font-size: 1.5em;
     }
 }
+@media ( max-width : 767px) {
+    .admin-bar .search-box form {
+        margin: 0 0 0 38px !important;
+        padding: 0 !important;
+
+}
+
 
 @media ( max-width : 480px) {
     .jumbotron {
